@@ -128,6 +128,8 @@ Bug Fixes
 * The "Update Appliance Platform" checkbox is now the proper size. (RBL-3336)
 * Rerunning the rbuilder initial setup no longer resets the internal password,
   as that caused previously created repositories to become unavailable. (RBL-3344)
+* Failures while creating the product repository no longer result in a
+  broken product being created. (RBL-3613)
 
 Changes in 4.1.1
 ================
